small date word wrap fix

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -49,7 +49,9 @@ body {
 .newsItem .newsHead div:first-child{
     position:absolute;
     bottom: 0px;
+    white-space: nowrap;
 }
+
 
 .row.newsHead h3{
     margin-top:10px;
